[gd_scene load_steps=10 format=2]

[ext_resource path="res://ui/GUI.gd" type="Script" id=1]
[ext_resource path="res://ui/reload_back.png" type="Texture" id=2]
[ext_resource path="res://ui/reload.png" type="Texture" id=3]
[ext_resource path="res://ui/LEMONMILK-Regular.otf" type="DynamicFontData" id=4]
[ext_resource path="res://ui/pistol.png" type="Texture" id=5]
[ext_resource path="res://ui/stamina_border.png" type="Texture" id=6]
[ext_resource path="res://ui/stamina_bar.png" type="Texture" id=7]
[ext_resource path="res://ui/Crosshair.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = 2
extra_spacing_char = 1
font_data = ExtResource( 4 )

[node name="GUI" type="MarginContainer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -159.0
margin_top = -87.0
margin_right = -47.0
margin_bottom = -31.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomRight" type="VBoxContainer" parent="."]
margin_right = 112.0
margin_bottom = 56.0
alignment = 1

[node name="AmmoContainer" type="HBoxContainer" parent="BottomRight"]
margin_top = 5.0
margin_right = 112.0
margin_bottom = 39.0
alignment = 2

[node name="Reloading" type="Node2D" parent="BottomRight/AmmoContainer"]
position = Vector2( 5.84, -8.27 )
scale = Vector2( 0.05, 0.05 )

[node name="ReloadingProgress" type="TextureProgress" parent="BottomRight/AmmoContainer/Reloading"]
margin_left = -1077.82
margin_top = 137.458
margin_right = -274.824
margin_bottom = 932.458
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )
fill_mode = 4
radial_initial_angle = 180.0

[node name="Ammo" type="Label" parent="BottomRight/AmmoContainer"]
margin_left = 69.0
margin_right = 112.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
text = "0|0"
align = 1
valign = 1

[node name="GunIcon" type="Node2D" parent="BottomRight/AmmoContainer"]
scale = Vector2( 0.05, 0.05 )

[node name="Pistol" type="TextureRect" parent="BottomRight/AmmoContainer/GunIcon"]
margin_left = 208.195
margin_top = -104.037
margin_right = 1232.2
margin_bottom = 919.963
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaminaBar" type="TextureProgress" parent="BottomRight"]
margin_top = 43.0
margin_right = 112.0
margin_bottom = 51.0
value = 50.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 7 )
tint_under = Color( 0.831373, 0.831373, 0.831373, 1 )
tint_progress = Color( 0.321569, 0.941176, 0.14902, 1 )
nine_patch_stretch = true
stretch_margin_left = 2
stretch_margin_top = 8
stretch_margin_right = 2

[node name="Tween" type="Tween" parent="."]

[node name="Crosshair" parent="." instance=ExtResource( 8 )]
